Revision history for Class-Tiny

{{$NEXT}}

1.004     2015-10-30 10:33:59-04:00 America/New_York

    - No changes since 1.003

1.003     2015-10-27 13:01:02-04:00 America/New_York (TRIAL RELEASE)

    [INTERNAL]

    - Refactored accessor generation to allow subclasses of Class::Tiny
      to implement alternate accessors.

1.001     2015-01-30 21:13:07-05:00 America/New_York

    [ADDED]

    - Added support for BUILDARGS for Moo(se) compatibility

    [INTERNAL]

    - Implements BUILDALL via method (was inline) for Moo(se) compatibility

1.000     2014-07-16 09:55:29-04:00 America/New_York

    [*** INCOMPATIBLE CHANGES ***]

    - Attributes for custom accessors *MUST* be declared for them to be
      set via the constructor.  It is no longer sufficient for a method of
      the same name to exist.

    - Unknown constructor arguments are ignored rather than fatal; they are
      not included in the object.  Special instructions for using BUILD to
      hide constructor arguments from validation are irrelevant and have
      been removed.

    - These changes make Class::Tiny-based classes easier to subclass by
      more advanced object frameworks like Moose or Moo.

0.015     2014-07-13 23:10:47-04:00 America/New_York

    [CHANGED]

    - lowered minimum perl to 5.006

0.014     2013-11-28 07:12:14 America/New_York

    [FIXED]

    - put back a 'no warnings "once"' line that caused downstream warnings

0.013     2013-11-26 12:01:13 America/New_York

    [DOCUMENTED]

    - expanded comparision to Object::Tiny and Class::Accessor

0.012     2013-11-01 16:36:35 America/New_York

    [DOCUMENTED]

    - added documentation notes about multiple inheritance
      and attribute defaults under subclassing

    [INTERNAL]

    - added tests for multiple inheritance

0.011     2013-09-25 11:08:07 America/New_York

    [FIXED]

    - compile test could hang on Windows

    [PREREQS]

    - ExtUtils::MakeMaker configure_requires dropped to 6.17
