@@ -62,18 +62,35 @@ sub _gen_accessor {
 sub __gen_sub_body {
     my ( $self, $name, $has_default, $default_type ) = @_;
 
-    my $sub = "sub $name { if (\@_ == 1) {";
-
     if ( $has_default && $default_type eq 'CODE' ) {
-        $sub .= "if ( !exists \$_[0]{$name} ) { \$_[0]{$name} = \$default->(\$_[0]) }";
+        return << "HERE";
+sub $name {
+    return (
+          ( \@_ == 1 && exists \$_[0]{$name} )
+        ? ( \$_[0]{$name} )
+        : ( \$_[0]{$name} = ( \@_ == 2 ) ? \$_[1] : \$default->( \$_[0] ) )
+    );
+}
+HERE
     }
     elsif ($has_default) {
-        $sub .= "if ( !exists \$_[0]{$name} ) { \$_[0]{$name} = \$default }";
+        return << "HERE";
+sub $name {
+    return (
+          ( \@_ == 1 && exists \$_[0]{$name} )
+        ? ( \$_[0]{$name} )
+        : ( \$_[0]{$name} = ( \@_ == 2 ) ? \$_[1] : \$default )
+    );
+}
+HERE
     }
-
-    $sub .= "return \$_[0]{$name} } else { return \$_[0]{$name}=\$_[1] } }";
-
-    return $sub;
+    else {
+        return << "HERE";
+sub $name {
+    return \@_ == 1 ? \$_[0]{$name} : ( \$_[0]{$name} =  \$_[1] );
+}
+HERE
+    }
 }
 
 sub get_all_attributes_for {
