@@ -2,6 +2,11 @@ Revision history for Class-Tiny
 
 {{$NEXT}}
 
+    [INTERNAL]
+
+    - Optimize generated accessors (5% to 25% faster depending on
+      combination of read vs write and default vs no-default).
+
 1.004     2015-10-30 10:33:59-04:00 America/New_York
 
     - No changes since 1.003
